--- a/Yapbam/src/localization/fr/license.html
+++ b/Yapbam/src/localization/fr/license.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head>
-<meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><title>License</title></head>
-<body>
+
+<meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><title>License</title></head><body>
 Ce programme est un logiciel libre&nbsp;; vous pouvez le
 redistribuer ou le modifier suivant les termes de la <em lang="en">&#8220;GNU
 General Public License&#8221;</em> telle que publiée par la <em lang="en">Free Software Foundation</em>&nbsp;:
@@ -20,7 +20,12 @@ française</a>).
 L'écran de démarrage est basé sur une image originale de&nbsp;(<a href="http://www.flickr.com/people/ppdigital/">Darren Hester</a>)
 publiée sous license <a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="nofollow">Creative Commons Attribution Non-Commercial
 License</a>.
-<br><br>
+<br><br>Ce logiciel utilise la librairie A-JLib sous <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html">License
+Générale
+Publique GNU</a>.
+Le code source de cette librairie est disponible ici : <a href="http://sourceforge.net/projects/ajlib/">http://sourceforge.net/projects/ajlib/</a>.
+<br>
+<br>
 Ce logiciel utilise la librairie JFreeChart sous license <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General Public License</a>.
 Le code source de cette librairie est disponible ici : <a href="http://www.jfree.org/jfreechart/">http://www.jfree.org/jfreechart/</a>.
 <br><br>
