--- a/Yapbam/src/localization/license.html
+++ b/Yapbam/src/localization/license.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head>
-<meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><title>License</title></head>
-<body>
+
+<meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><title>License</title></head><body>
 This
 program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the
@@ -18,6 +18,10 @@ The splash screen of this application is based on a picture from (<a href="http:
 licensed under <a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="nofollow">Creative Commons Attribution Non-Commercial
 License</a>.
 <br><br>
+This software use the A-JLib library released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">GNU
+General Public License</a>.
+The source code of this library is available at <a href="http://sourceforge.net/projects/ajlib/">http://sourceforge.net/projects/ajlib/</a>.<br>
+<br>
 This software use the JFreeChart library released under <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General Public License</a>.
 The source code of this library is available at <a href="http://www.jfree.org/jfreechart/">http://www.jfree.org/jfreechart/</a>.
 <br><br>
