--- a/src/localization/fr/license.html
+++ b/src/localization/fr/license.html
@@ -1,8 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head>
-<meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><title>License</title>
-
-</head>
+<meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><title>License</title></head>
 <body>
 Ce programme est un logiciel libre&nbsp;; vous pouvez le
 redistribuer ou le modifier suivant les termes de la <em lang="en">&#8220;GNU
@@ -53,8 +51,8 @@ Ce logiciel utilise la librairie JFreeChart sous license <a href="http://www.gnu
 Public License</a>.
 Le code source de cette librairie est disponible ici : <a href="http://www.jfree.org/jfreechart/">http://www.jfree.org/jfreechart/</a>.
 <br>
-<br>
-Ce logiciel utilise une version modifiée du convertisseur de devises
+<br>Ce logiciel utilise la librairie OpenCSV sous
+license Apache version 2. Le code source est disponible ici&nbsp;<a href="http://opencsv.sourceforge.net/">http://opencsv.sourceforge.net</a>.<br><br>&nbsp;Ce logiciel utilise une version modifiée du convertisseur de devises
 écrit par Thomas Knierim sous license <a href="http://www.gnu.org/licenses/gpl-3.0.html">General
 Public License</a>. Son code source est inclus dans les sources
 de Yapbam (net.yapbam.tools.currency.converter.CurrencyConverter).<br>
