--- a/Yapbam/src/localization/license.html
+++ b/Yapbam/src/localization/license.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head>
+<meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><title>License</title>
 
-<meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><title>License</title></head>
+</head>
 <body>
 This
 program is free software: you can redistribute it and/or modify it
@@ -18,23 +19,63 @@ General Public License</a> for more details.<br>
 The splash screen of this application is based on a picture from (<a href="http://www.flickr.com/people/ppdigital/">Darren Hester</a>)
 licensed under <a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="nofollow">Creative Commons Attribution Non-Commercial
 License</a>.
-<br><br>
+<br>
+<br>
 This software uses the A-JLib library released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">GNU
 General Public License</a>.
-The source code of this library is available at <a href="http://sourceforge.net/projects/ajlib/">http://sourceforge.net/projects/ajlib/</a>.<br><br>
+The source code of this library is available at <a href="http://sourceforge.net/projects/ajlib/">http://sourceforge.net/projects/ajlib/</a>.<br>
+<br>
 This software uses the JClop library released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">GNU
 General Public License</a>.
-The source code of this library is available at&nbsp;<a href="http://sourceforge.net/projects/jclop/">http://sourceforge.net/projects/jclop/</a>.<br><br>
-This software uses the Javaluator library released under&nbsp;<a href="http://opensource.org/licenses/lgpl-3.0.html">LGPL v3 license</a>.
+The source code of this library is available at&nbsp;<a href="http://sourceforge.net/projects/jclop/">http://sourceforge.net/projects/jclop/</a>.<br>
+<br>
+This software uses the Javaluator library released under&nbsp;<a href="http://opensource.org/licenses/lgpl-3.0.html">LGPL v3
+license</a>.
 The source code of this library is available at <a href="http://sourceforge.net/projects/javaluator/">http://sourceforge.net/projects/javaluator/</a>.<br>
-<br>This software uses commons-lang, commons-logging and commons-codec libraries under Apache
-license version 2.&nbsp;The source code of these libraries is available at &nbsp;<a href="http://commons.apache.org/">http://commons.apache.org/</a><br><br>This software uses http-core, http-mime and http-client libraries under Apache
-license version 2.&nbsp;The source code of these libraries is available at&nbsp;<a href="http://hc.apache.org/">http://hc.apache.org/</a><br><br>This software uses json-simple under Apache
-license version 2.&nbsp;The source code of these libraries is available at&nbsp;<a href="http://code.google.com/p/json-simple/">http://code.google.com/p/json-simple/</a><br><br>This software uses Core Dropbox API under MIT
-license.&nbsp;The source code of these libraries is available at&nbsp;<a href="http://www.dropbox.com/developers">http://www.dropbox.com/developers</a><a href="https://code.google.com/p/json-simple/"></a><br><a href="http://hc.apache.org/"></a><a href="http://commons.apache.org/"></a><br>This software uses the JFreeChart library released under <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General Public License</a>.
+<br>
+This software uses commons-lang, commons-logging and commons-codec
+libraries under Apache
+license version 2.&nbsp;The source code of these libraries is
+available at &nbsp;<a href="http://commons.apache.org/">http://commons.apache.org/</a><br>
+<br>
+This software uses http-core, http-mime and http-client libraries under
+Apache
+license version 2.&nbsp;The source code of these libraries is
+available at&nbsp;<a href="http://hc.apache.org/">http://hc.apache.org/</a><br>
+<br>
+This software uses json-simple under Apache
+license version 2.&nbsp;The source code of these libraries is
+available at&nbsp;<a href="http://code.google.com/p/json-simple/">http://code.google.com/p/json-simple/</a><br>
+<br>
+This software uses Core Dropbox API under MIT
+license.&nbsp;The source code of these libraries is available
+at&nbsp;<a href="http://www.dropbox.com/developers">http://www.dropbox.com/developers</a><br>
+<br>
+This software uses the JFreeChart library released under <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General
+Public License</a>.
 The source code of this library is available at <a href="http://www.jfree.org/jfreechart/">http://www.jfree.org/jfreechart/</a>.
-<br><br>
-This software uses a modified version of Currency converter written by Thomas Knierim released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">General Public License</a>. Its source code is included in Yapbam sources (net.yapbam.currency.CurrencyConverter).<br><br>
-This software uses a modified version of a component&nbsp;written by <a href="http://www.stephenkelvin.de/XTableColumnModel/">Stephen Kelvin</a>. Its source code&nbsp;is included in Yapbam sources (net.yapbam.gui.util.XTableColumnModel).<br><br>
-This software uses a&nbsp;component&nbsp;written by&nbsp;<a href="http://terai.xrea.jp/">Atsuhiro Terai</a> released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">General Public License</a>. Its source code&nbsp;is included in Yapbam sources (terai.xrea.jp.DndTabbedPane).<br><br>The windows executable is created with <a href="http://launch4j.sourceforge.net/">Launch4J</a>, released under <a href="http://www.opensource.org/licenses/bsd-license.html">BSD license</a>.
+<br>
+<br>
+This software uses the OpenCSV library released under Apache
+license version 2.&nbsp;The source code of these libraries is
+available at&nbsp;<a href="http://opencsv.sourceforge.net/">http://opencsv.sourceforge.net</a>.<br>
+<br>
+This software uses a modified version of Currency converter written by
+Thomas Knierim released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">General
+Public License</a>. Its source code is included in Yapbam sources
+(net.yapbam.currency.CurrencyConverter).<br>
+<br>
+This software uses a modified version of a component&nbsp;written
+by <a href="http://www.stephenkelvin.de/XTableColumnModel/">Stephen
+Kelvin</a>. Its source code&nbsp;is included in Yapbam
+sources (net.yapbam.gui.util.XTableColumnModel).<br>
+<br>
+This software uses a&nbsp;component&nbsp;written by&nbsp;<a href="http://terai.xrea.jp/">Atsuhiro Terai</a>
+released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">General
+Public License</a>. Its source code&nbsp;is included in
+Yapbam sources (terai.xrea.jp.DndTabbedPane).<br>
+<br>
+The windows executable is created with <a href="http://launch4j.sourceforge.net/">Launch4J</a>,
+released under <a href="http://www.opensource.org/licenses/bsd-license.html">BSD
+license</a>.
 </body></html>
