--- a/src/localization/contributors.html
+++ b/src/localization/contributors.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
-
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Contributors</title>
-
-<style type="text/css">
+<html>
+  <head>
+    <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+    <title>Contributors</title>
+    <style type="text/css">
 .bugFix {
 color: #009900;
 }
@@ -15,9 +15,23 @@ color: #ff9900;
 }
 -->
 </style></head>
-<body>
-<h1>Contributors</h1>
-English translation: <a href="http://minervah.users.sourceforge.net/">Sharada Palagummi</a><br>
-Portuguese translation: <a href="http://marcolanza.users.sourceforge.net/">Marco Lanza</a>, Robert Marques Maia<br>
-German translation: <a href="http://jrthies.users.sourceforge.net/">Jean-René Thies</a><br><br>French user guide: Christian Record<br><br>Tests: Laurence Bot, Christophe Aroles, Philippe Petit<br><br>Development, web site, administration: <a href="http://fathzer.users.sourceforge.net/">Jean-Marc Astesana (Fathzer)</a><br>
-</body></html>
+  <body>
+    <h1>Contributors</h1>
+    English translation: <a href="http://minervah.users.sourceforge.net/">Sharada
+      Palagummi</a><br>
+    Portuguese translation: <a href="http://marcolanza.users.sourceforge.net/">Marco
+      Lanza</a>, Robert Marques Maia<br>
+    German translation: <a href="http://jrthies.users.sourceforge.net/">Jean-René
+      Thies</a><br>
+    <br>
+    French user guide: Christian Record<br>
+    <br>
+    Tests: Laurence Bot, Christophe Aroles, Philippe Petit<br>
+    <br>
+    Development: <a href="http://fathzer.users.sourceforge.net/">Jean-Marc
+      Astesana (Fathzer)</a>, <a href="https://sourceforge.net/u/fduminy/">Fabien
+      Duminy</a><br>
+    Web site, administration: <a href="http://fathzer.users.sourceforge.net/">Jean-Marc
+      Astesana (Fathzer)</a><br>
+  </body>
+</html>
