--- a/src/localization/de/contributors.html
+++ b/src/localization/de/contributors.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
-
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Mitwirkende</title>
-
-<style type="text/css">
+<html>
+  <head>
+    <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+    <title>Mitwirkende</title>
+    <style type="text/css">
 .bugFix {
 color: #009900;
 }
@@ -14,11 +14,22 @@ color: #aa0000;
 color: #ff9900;
 }
 -->
-</style></head><body>
-<h1>Mitwirkende</h1>
-Englische Übersetzung: <a href="http://minervah.users.sourceforge.net/">Sharada Palagummi</a><br>
-Portugiesische Übersetzung: <a href="http://marcolanza.users.sourceforge.net/">Marco Lanza</a>, Robert Marques Maia<br>
-Deutsche Übersetzung: <a href="http://jrthies.users.sourceforge.net/">Jean-Ren&eacute; Thies</a><br>
-Tests: Laurence Bot, Christophe Aroles, Philippe Petit<br>
-Entwicklung, Webseite, Administration: <a href="http://fathzer.users.sourceforge.net/">Jean-Marc Astesana (Fathzer)</a><br>
-</body></html>
+</style></head>
+  <body>
+    <h1>Mitwirkende</h1>
+    Englische Übersetzung: <a href="http://minervah.users.sourceforge.net/">Sharada
+      Palagummi</a><br>
+    Portugiesische Übersetzung: <a href="http://marcolanza.users.sourceforge.net/">Marco
+      Lanza</a>, Robert Marques Maia<br>
+    Deutsche Übersetzung: <a href="http://jrthies.users.sourceforge.net/">Jean-René
+      Thies</a><br>
+    <br>
+    Tests: Laurence Bot, Christophe Aroles, Philippe Petit<br>
+    <br>
+    Entwicklung: <a href="http://fathzer.users.sourceforge.net/">Jean-Marc
+      Astesana (Fathzer)</a>, <a href="https://sourceforge.net/u/fduminy/">Fabien
+      Duminy</a>.<br>
+    Webseite, Administration: <a href="http://fathzer.users.sourceforge.net/">Jean-Marc
+      Astesana (Fathzer)</a><br>
+  </body>
+</html>
