--- a/src/localization/fr/contributors.html
+++ b/src/localization/fr/contributors.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Contributeurs</title>
-
-<style type="text/css">
+<html>
+  <head>
+    <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+    <title>Contributeurs</title>
+    <style type="text/css">
 .bugFix {
 color: #009900;
 }
@@ -14,17 +15,25 @@ color: #ff9900;
 }
 -->
 </style>
-</head>
-<body>
-<h1>Contributeurs</h1>
-Traduction anglaise : <a href="http://minervah.users.sourceforge.net/">Sharada Palagummi</a><br>
-Traduction portuguaise : <a href="http://marcolanza.users.sourceforge.net/">Marco Lanza</a>, Robert Marques Maia<br>
-Traduction allemande : <a href="http://jrthies.users.sourceforge.net/">Jean-René Thies</a><br>
-<br>
-Tests : Laurence Bot, Christophe Aroles, Philippe Petit<br>
-<br>
-Mode d'emploi français : Christian Record<br>
-<br>
-Développement, site web, administration : <a href="http://fathzer.users.sourceforge.net/">Jean-Marc
-Astesana (Fathzer)</a><br>
-</body></html>
+  </head>
+  <body>
+    <h1>Contributeurs</h1>
+    Traduction anglaise : <a href="http://minervah.users.sourceforge.net/">Sharada
+      Palagummi</a><br>
+    Traduction portuguaise : <a href="http://marcolanza.users.sourceforge.net/">Marco
+      Lanza</a>, Robert Marques Maia<br>
+    Traduction allemande : <a href="http://jrthies.users.sourceforge.net/">Jean-René
+      Thies</a><br>
+    <br>
+    Tests : Laurence Bot, Christophe Aroles, Philippe Petit<br>
+    <br>
+    Mode d'emploi français : Christian Record<br>
+    <br>
+    Développement : <a href="http://fathzer.users.sourceforge.net/">Jean-Marc
+      Astesana (Fathzer)</a>, <a href="https://sourceforge.net/u/fduminy/">Fabien
+      Duminy</a><br>
+    Site web, administration : <a href="http://fathzer.users.sourceforge.net/">Jean-Marc
+Astesana
+      (Fathzer)</a><br>
+  </body>
+</html>
