--- a/src/localization/contributors.html
+++ b/src/localization/contributors.html
@@ -29,8 +29,7 @@ color: #ff9900;
     Tests: Laurence Bot, Christophe Aroles, Philippe Petit<br>
     <br>
     Development: <a href="http://fathzer.users.sourceforge.net/">Jean-Marc
-      Astesana (Fathzer)</a>, <a href="https://sourceforge.net/u/fduminy/">Fabien
-      Duminy</a><br>
+      Astesana (Fathzer)</a>, <a href="http://www.duminy.fr/">Fabien Duminy</a><br>
     Web site, administration: <a href="http://fathzer.users.sourceforge.net/">Jean-Marc
       Astesana (Fathzer)</a><br>
   </body>
