--- a/Yapbam/deliveryProcess.html
+++ b/Yapbam/deliveryProcess.html
@@ -1,41 +1,67 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>Yapbam delivery process</title>
-
-<style type="text/css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <meta content="text/html; charset=windows-1252" http-equiv="content-type">
+    <title>Yapbam delivery process</title>
+    <style type="text/css">
 .variable {
 font-style: italic;
 text-decoration: underline;
 }
 </style></head>
-<body>
-<h1>Yapbam delivery process</h1>
-<ol>
-<li>Set the version number in the build.xml file =&gt; <span class="variable">version</span></li>
-<li>Build the classic distribution with build.xml.<br>
-<span class="variable"></span></li>
-
-<li>Create the windows installer with NSIS.<br>
-select the "Installer based on a zip file" option and enter "$EXEDIR\Yapbam" as default folder.</li><li>Run the deployer in project YapbamDeployment (Be aware to set the right versions in the program arguments).<br>Wait for it completes (it is long as this class upload Yapbam to sourceForge).</li><li>Test that the autoupdate is ok with a copy of the previous version of
-yapbam. Also test that the&nbsp;archives on sourceforge are ok ... sometimes,
-upload results in a partial file.</li>
-<li>In the sourceforge file browser, give the linux, BSD,
-etc... attributes (or windows) to the new uploaded files.</li><li>Commit pending changes to svn repository.</li>
-<li>Post a comment on twitter.</li>
-<li>Post replies on opened bug report or feature requests.</li>
-<li>Mise à jour du référencement par anshare (www.anshare.org)</li><ol><li>Mettre à jour la fiche logiciel :</li><ol><li>Mettre
-un lien vers cet .exe (les liens de téléchargement de sourceforge sont
-interdits) : http://www.yapbam.net/directDownload/yapbam-<span style="font-style: italic;">version</span>.exe.</li><li>Supprimer
-Linux dans les OS cible (l'auteur du site ne connait pas le principe de
-Write Once Run Everywhere, donc on n'a droit qu'à un seul OS).</li></ol></ol></ol>
-<br>
-<h2>A way to&nbsp;carrefully test the auto update</h2>
-<ol>
-<li>In net.yapbam.update.VersionManager#getUpdateURL, change
-the updateinfo URL to a local file and put a fake version number in
-net.yapbam.update.version.txt</li>
-<li>In this local file, copy the following lines ouputed by
-srcTests/net.yapbam.update.GetHashAndSize</li>
-<li>Launch this modified version of yapbam.</li>
-<li>Try to update.</li>
-</ol>
-</body></html>
+  <body>
+    <h1>Yapbam delivery process</h1>
+    <ol>
+      <li>Get the translations from Crowdin.<br>
+        Launch the com.fathzer.localization.crowdin.GetTranslationsCmd in
+        jlocal-tools project with arguments project=yapbam key=<span style="font-style: italic;">theyapbamkey</span>
+        lng=fr,pt-BR:pt,de,en:,zh-TW:zh where=<span style="font-style: italic;">workspaceRoot</span><br>
+        Then, check whether YapbamCommons translations has changed. In such a
+        case, update the artifact.</li>
+      <li>Set the version number in the build.xml file =&gt; <span class="variable">version</span></li>
+      <li>Build the classic distribution with build.xml.<br>
+        <span class="variable"></span></li>
+      <li>Create the windows installer with NSIS.<br>
+        select the "Installer based on a zip file" option and enter
+        "$EXEDIR\Yapbam" as default folder.</li>
+      <li>Run the deployer in project YapbamDeployment (Be aware to set the
+        right versions in the program arguments).<br>
+        Wait for it completes (it is long as this class upload Yapbam to
+        sourceForge).</li>
+      <li>Test that the autoupdate is ok with a copy of the previous version of
+        yapbam. Also test that the&nbsp;archives on sourceforge are ok ...
+        sometimes,
+        upload results in a partial file.</li>
+      <li>In the sourceforge file browser, give the linux, BSD,
+        etc... attributes (or windows) to the new uploaded files.</li>
+      <li>Commit pending changes to svn repository.</li>
+      <li>Post a comment on twitter.</li>
+      <li>Post replies on opened bug report or feature requests.</li>
+      <li>Mise à jour du référencement par anshare (www.anshare.org)</li>
+      <ol>
+        <li>Mettre à jour la fiche logiciel :</li>
+        <ol>
+          <li>Mettre
+            un lien vers cet .exe (les liens de téléchargement de sourceforge
+            sont
+            interdits) : http://www.yapbam.net/directDownload/yapbam-<span style="font-style: italic;">version</span>.exe.</li>
+          <li>Supprimer
+            Linux dans les OS cible (l'auteur du site ne connait pas le principe
+            de
+            Write Once Run Everywhere, donc on n'a droit qu'à un seul OS).</li>
+        </ol>
+      </ol>
+    </ol>
+    <br>
+    <h2>A way to&nbsp;carrefully test the auto update</h2>
+    <ol>
+      <li>In net.yapbam.update.VersionManager#getUpdateURL, change
+        the updateinfo URL to a local file and put a fake version number in
+        net.yapbam.update.version.txt</li>
+      <li>In this local file, copy the following lines ouputed by
+        srcTests/net.yapbam.update.GetHashAndSize</li>
+      <li>Launch this modified version of yapbam.</li>
+      <li>Try to update.</li>
+    </ol>
+  </body>
+</html>
